Update BE/src/main/java/com/S209/yobi/config/SecurityConfig.java
Former-commit-id: d917b473920edcb25d4826f93d849a71c5fe6149